# copyfail-guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/copyfail_guard/: __init__.py  __main__.py  cli.py  detector.py  distro.py  fixer.py  kernel.py  modules.py  output.py  system.py
tests/: test_cli.py  test_detector.py  test_distro.py  test_fixer.py  test_kernel.py  test_modules.py  test_output.py  test_reset.py
tests/fixtures/builtin-kernel/etc/: os-release
tests/fixtures/builtin-kernel/proc/: modules
tests/fixtures/fedora41/etc/: os-release
tests/fixtures/no-module/etc/: os-release
tests/fixtures/no-module/proc/: modules
tests/fixtures/rhel10/etc/: os-release
tests/fixtures/rhel10/proc/: modules
tests/fixtures/sles16/etc/: os-release
tests/fixtures/sles16/proc/: modules
tests/fixtures/ubuntu2404-mitigated/etc/: os-release
tests/fixtures/ubuntu2404-mitigated/etc/modprobe.d/: cve-2026-31431-copyfail-guard.conf
tests/fixtures/ubuntu2404-mitigated/proc/: modules
tests/fixtures/ubuntu2404/proc/: modules
