[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copyfail-guard"
version = "0.0.3"
description = "Detect and mitigate CVE-2026-31431 (Copy Fail) on Linux systems."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "copyfail-guard contributors" }]
keywords = ["cve", "linux", "security", "kernel", "algif_aead", "copy-fail"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
"Bug Reports" = "https://github.com/your-org/copyfail-guard/issues"

[project.scripts]
copyfail-guard = "copyfail_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
copyfail_guard = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-too-long; ruff format handles this, but allow longer fixture strings
]

[tool.ruff.lint.per-file-ignores]
# Test functions use scoped imports (e.g. `import tempfile` inside a test method) intentionally,
# and frozen-dataclass mutation tests assert on bare Exception because dataclasses raises
# FrozenInstanceError which isn't worth importing.
"tests/*" = ["B017", "RUF015"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.main]
# Treat src/ as the package root so pylint resolves imports correctly.
source-roots = ["src"]

[tool.pylint."messages control"]
# Suppress style-only findings that are noise for a stdlib-only security tool:
#   C0114/C0115/C0116  missing docstrings (covered by code comments)
#   C0415              import-outside-toplevel in tests (scoped imports are intentional)
#   R0902              too-many-instance-attributes (DI dataclasses need many fields)
#   R0911              too-many-return-statements (decision-tree logic is by design)
#   R0912/R0915        too-many-branches/statements (fixer & renderer are intentionally wide)
#   R0913              too-many-arguments (SystemContext injection pattern)
disable = [
    "C0114",
    "C0115",
    "C0116",
    "C0415",
    "R0902",
    "R0911",
    "R0912",
    "R0913",
    "R0915",
]

[tool.pylint.format]
max-line-length = 100
